selfhost/test/parser/import_error_alias_no_as.out
Error at %FILE_NAME%:1:16
Unexpected token 'identifier', expected 'as':
  |  import "./abc" abc
                    ^